tests/paczka1/fuzzy1/90035237.err
Error in line 5: YmrksCj A366 44,6
Error in line 6: YmrksCj A951 93,3
Error in line 11: A877 A366 53,4
Error in line 10: W4Avs A951 31,7
Error in line 12: A877 S906 33,1
Error in line 15: A877 A877 22,4
Error in line 17: A877 A951 69,4
Error in line 9: YmrksCj A877 32,4
Error in line 33: YmrksCj A951 60,8
Error in line 39: YmrksCj S906 62,2
